# firelens

./: .env.sample  .gitignore  AGENTS.md  LICENSE.md  Makefile  README.md  pyproject.toml  requirements.txt  script.py
app/: main.py
app/client/: streamlit_app.py
app/core/: config.py  models.py
app/indexing/: chunker.py  embedder.py  indexer.py  parser.py  walker.py
app/legacy/: github.py  llm.py
app/search/: exact.py  fuzzy.py  semantic.py
app/services/: github.py  llm.py
app/storage/: __init__.py  database.py
tests/: test_indexing_basics.py  test_indexing_persistence.py  test_storage_database.py
