[project]
name = "firelens"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
    "einops>=0.8.2",
    "fastapi[standard]>=0.138,<0.139",
    "openai>=2.44,<3",
    "pydantic-settings>=2.3,<3",
    "requests>=2.32,<3",
    "sentence-transformers>=5.6.0",
    "streamlit>=1.58,<2",
]
